# TinyMaix-RP2040

./: .gitignore  CMakeLists.txt  readme.md
examples/: CMakeLists.txt
examples/cifar10/: CMakeLists.txt  main.c
examples/kws/: CMakeLists.txt
examples/mbnet/: CMakeLists.txt  main.c
examples/mnist/: CMakeLists.txt  main.c
examples/vww/: CMakeLists.txt  main.c
tinymaix/: CMakeLists.txt  tm_port.h
